--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         </nav>
     </header>
 
+    <main>
+        <div class="messages-box">
+            
+        </div>
+    </main>
+
     <footer>
         <div class="footer-content">
             <input type="text" name="message" id="" placeholder="Escreva aqui...">
@@ -28,7 +34,9 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
