logIn function added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <footer>
         <div class="footer-content">
-            <input type="text" name="message" id="" placeholder="Escreva aqui...">
+            <input type="textarea" name="message" id="message_area" placeholder="Escreva aqui...">
             <ion-icon name="paper-plane-outline"></ion-icon>
         </div>
     </footer>
