--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
         <div class="footer-content">
             <input type="textarea" name="message" id="message_area" placeholder="Escreva aqui...">
-            <ion-icon name="paper-plane-outline"></ion-icon>
+            <ion-icon name="paper-plane-outline" onclick="sendMessage()"></ion-icon>
         </div>
     </footer>
 
