log in screen added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
     </header>
 
     <main>
+        <div class="login">
+            <div class="login-content">
+                <img src="assets/images/logo 1.png" alt="Bate Papo UOL">
+                <input type="text" id="name" placeholder="Digite seu nome">
+                <button onclick="logIn()">Entrar</button>
+            </div>
+        </div>
         <div class="messages-box">
-            
         </div>
     </main>
 
