--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <div class="login">
+        <div class="login disabled">
             <div class="login-content">
                 <img src="assets/images/logo 1.png" alt="Bate Papo UOL">
                 <input type="text" id="name" placeholder="Digite seu nome">
@@ -32,6 +32,38 @@
         <div class="messages-box">
         </div>
     </main>
+
+    <aside>
+        <nav>
+            <p class="side-title">Escolha um contato
+                para enviar mensagem:</p>
+            <div class="people">
+                <div class="option">
+                    <ion-icon name="people"></ion-icon>
+                    <p>Todos</p>
+                </div>
+                <div class="option">
+                    <ion-icon name="people"></ion-icon>
+                    <p>Todos</p>
+                </div>
+                <div class="option">
+                    <ion-icon name="people"></ion-icon>
+                    <p>Todos</p>
+                </div>
+            </div>
+            <p class="side-title">Escolha a visibilidade:</p>
+            <div class="visibility">
+                <div class="option">
+                    <ion-icon name="lock-open"></ion-icon>
+                    <p>Público</p>
+                </div>
+                <div class="option">
+                    <ion-icon name="lock-closed"></ion-icon>
+                    <p>Reservadamente</p>
+                </div>
+            </div>
+        </nav>
+    </aside>
 
     <footer>
         <div class="footer-content">
