--- a/index.html
+++ b/index.html
@@ -38,28 +38,43 @@
             <p class="side-title">Escolha um contato
                 para enviar mensagem:</p>
             <div class="people">
-                <div class="option">
-                    <ion-icon name="people"></ion-icon>
-                    <p>Todos</p>
+                <div class="option" onclick="toggleCheck(this)">
+                    <div>
+                        <ion-icon name="people"></ion-icon>
+                        <p>Todos</p>
+                    </div>
+                    <ion-icon name="checkmark"></ion-icon>
                 </div>
-                <div class="option">
-                    <ion-icon name="people"></ion-icon>
-                    <p>Todos</p>
+                <div class="option" onclick="toggleCheck(this)">
+                    <div>
+                        <ion-icon name="people"></ion-icon>
+                        <p>maria</p>
+                    </div>
+                    <ion-icon name="checkmark"></ion-icon>
                 </div>
-                <div class="option">
-                    <ion-icon name="people"></ion-icon>
-                    <p>Todos</p>
+                <div class="option" onclick="toggleCheck(this)">
+                    <div>
+                        <ion-icon name="people"></ion-icon>
+                        <p>eduardo</p>
+                    </div>
+                    <ion-icon name="checkmark"></ion-icon>
                 </div>
             </div>
             <p class="side-title">Escolha a visibilidade:</p>
             <div class="visibility">
-                <div class="option">
-                    <ion-icon name="lock-open"></ion-icon>
-                    <p>Público</p>
+                <div class="option" onclick="toggleCheck(this)">
+                    <div>
+                        <ion-icon name="lock-open"></ion-icon>
+                        <p>Público</p>
+                    </div>
+                    <ion-icon name="checkmark"></ion-icon>
                 </div>
-                <div class="option">
-                    <ion-icon name="lock-closed"></ion-icon>
-                    <p>Reservadamente</p>
+                <div class="option" onclick="toggleCheck(this)">
+                    <div>
+                        <ion-icon name="lock-closed"></ion-icon>
+                        <p>Reservadamente</p>
+                    </div>
+                    <ion-icon name="checkmark"></ion-icon>
                 </div>
             </div>
         </nav>
