enabled private messages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <div class="login disabled"> <!-- -->
+        <div class="login "> <!--disabled -->
             <div class="login-content">
                 <img src="assets/images/logo 1.png" alt="Bate Papo UOL">
                 <input type="text" id="name" placeholder="Digite seu nome">
@@ -39,27 +39,6 @@
             <p class="side-title">Escolha um contato
                 para enviar mensagem:</p>
             <div class="people">
-                <div class="option" onclick="toggleCheck(this)">
-                    <div>
-                        <ion-icon name="people"></ion-icon>
-                        <p>Todos</p>
-                    </div>
-                    <ion-icon name="checkmark"></ion-icon>
-                </div>
-                <div class="option" onclick="toggleCheck(this)">
-                    <div>
-                        <ion-icon name="people"></ion-icon>
-                        <p>maria</p>
-                    </div>
-                    <ion-icon name="checkmark"></ion-icon>
-                </div>
-                <div class="option" onclick="toggleCheck(this)">
-                    <div>
-                        <ion-icon name="people"></ion-icon>
-                        <p>eduardo</p>
-                    </div>
-                    <ion-icon name="checkmark"></ion-icon>
-                </div>
             </div>
             <p class="side-title">Escolha a visibilidade:</p>
             <div class="visibility">
