fixed checked options

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <ion-icon name="lock-open"></ion-icon>
                         <p>Público</p>
                     </div>
-                    <ion-icon name="checkmark"></ion-icon>
+                    <ion-icon name="checkmark" class="check"></ion-icon>
                 </div>
                 <div class="option" onclick="toggleCheck(this)">
                     <div>
