--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     
     <title>Bate Papo UOL</title>
 </head>
@@ -62,8 +62,11 @@
 
     <footer>
         <div class="footer-content">
-            <input type="textarea" name="message" id="message_area" placeholder="Escreva aqui...">
-            <ion-icon name="paper-plane-outline" onclick="sendMessage()"></ion-icon>
+            <div>
+                <input type="textarea" name="message" id="message_area" placeholder="Escreva aqui...">
+                <ion-icon name="paper-plane-outline" onclick="sendMessage()"></ion-icon>
+            </div>
+            <p>Enviando para Todos (Público)</p>
         </div>
     </footer>
 
