--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
     
     <title>Bate Papo UOL</title>
 </head>
@@ -25,8 +26,8 @@
         <div class="login "> <!--disabled -->
             <div class="login-content">
                 <img src="assets/images/logo 1.png" alt="Bate Papo UOL">
-                <input type="text" id="name" placeholder="Digite seu nome">
-                <button onclick="logIn()">Entrar</button>
+                <input type="text" id="name" data-identifier="enter-name" placeholder="Digite seu nome">
+                <button data-identifier="start" onclick="logIn()">Entrar</button>
             </div>
         </div>
         <div class="messages-box">
@@ -42,14 +43,14 @@
             </div>
             <p class="side-title">Escolha a visibilidade:</p>
             <div class="visibility">
-                <div class="option" onclick="toggleCheck(this)">
+                <div class="option" data-identifier="visibility" onclick="toggleCheck(this)">
                     <div>
                         <ion-icon name="lock-open"></ion-icon>
                         <p>Público</p>
                     </div>
                     <ion-icon name="checkmark" class="check"></ion-icon>
                 </div>
-                <div class="option" onclick="toggleCheck(this)">
+                <div class="option" data-identifier="visibility" onclick="toggleCheck(this)">
                     <div>
                         <ion-icon name="lock-closed"></ion-icon>
                         <p>Reservadamente</p>
@@ -63,8 +64,8 @@
     <footer>
         <div class="footer-content">
             <div>
-                <input type="textarea" name="message" id="message_area" placeholder="Escreva aqui...">
-                <ion-icon name="paper-plane-outline" onclick="sendMessage()"></ion-icon>
+                <input type="textarea" name="message" data-identifier="message" id="message_area" placeholder="Escreva aqui...">
+                <ion-icon name="paper-plane-outline" data-identifier="send-message" onclick="sendMessage()"></ion-icon>
             </div>
             <p>Enviando para Todos (Público)</p>
         </div>
