added green border on select

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <p class="side-title">Escolha a visibilidade:</p>
             <div class="visibility">
-                <div class="option" data-identifier="visibility" onclick="toggleCheck(this)">
+                <div class="option green_border" data-identifier="visibility" onclick="toggleCheck(this)">
                     <div>
                         <ion-icon name="lock-open"></ion-icon>
                         <p>Público</p>
